# 2

./: .gitignore  20220303 main文件的测试.ipynb  20220303 聚类的测试.ipynb  20220305 main_predict_test.ipynb  20220306 制作为了特征提取的训练数据集&测试pad_lstm.ipynb  20220307aemain 的测试.ipynb  20220311aemain 的测试.ipynb  20220311构建半监督的分类器.ipynb  20220314get familiar with tsfresh2.ipynb  20220329 attention stage result.ipynb  20220329 特征增强.ipynb  20220331特征增强2.ipynb  20220409 GET faminliar with MSU&RAW feature selection.ipynb  20220409 new feature(redundecy).ipynb  20220419 fd004 tsfeature extraction.ipynb  20220420 fd004 attentiondnn.ipynb  DNN_model.py  ae_feature_extraction.py  ae_main.py  config.py  data_preparing.py  data_process.py  diwang_feature_exrtaction.py  diwang_method test.ipynb  feature extration v1.ipynb  main.py  main_test.ipynb  pyproject.toml  requirements.txt  testing.py  ts_main.py  tsfresh_feature_extraction.py  utilities.py
.ipynb_checkpoints/: 20200314 get familiar with tsfresh-checkpoint.ipynb  202203013重写lstm autoencoder-checkpoint.ipynb  20220303 main文件的测试-checkpoint.ipynb  20220305 main_predict_test-checkpoint.ipynb  20220306 制作为了特征提取的训练数据集&测试pad_lstm-checkpoint.ipynb  20220311构建半监督的分类器-checkpoint.ipynb  20220311测试ae-feature-extraction-checkpoint.ipynb  20220314get familiar with tsfresh2-checkpoint.ipynb  20220314tsmian测试-checkpoint.ipynb  20220315tsfresh3-checkpoint.ipynb  20220320 GET faminliar with MSU&RAW feature selection-checkpoint.ipynb  20220322 get familiar with attention-checkpoint.ipynb  20220329 attention stage result-checkpoint.ipynb  main_test-checkpoint.ipynb  (+5 more)
(+300 files in other folders)
